--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,19 @@
 
 body {
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   box-sizing: border-box;
+}
+
+.numberPromptDiv {
+  z-index: 100;
+  height: 200px;
+  width: 300px;
+  margin: 200px 350px;
+}
+
+.numberPrompt {
+  
 }
 
 .square {
@@ -21,7 +32,7 @@ body {
   /* border: 2px solid turquoise; */
 }
 
-#containerDiv {
+#gridContainer {
   display: flex;
   flex-direction: column;
   height: 1000px;
@@ -30,4 +41,8 @@ body {
   /* flex-wrap: wrap; */
   justify-content: left;
   align-items: start;
+}
+
+#newGridButton {
+  background-color: aqua;
 }
