--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   justify-content: center;
   box-sizing: border-box;
 }
-
+/* 
 .numberPromptDiv {
   z-index: 100;
   height: 200px;
@@ -14,7 +14,7 @@ body {
 
 .numberPrompt {
   
-}
+} */
 
 .square {
   background-color: rgb(219, 12, 12);
@@ -23,6 +23,11 @@ body {
   aspect-ratio: 1 / 1;
   flex: 1 1 100px;
   box-sizing: border-box;
+}
+
+.squareMoused {
+  background-color: black;
+  border: solid 1px green;
 }
 
 .row {
