Update to gradient-based sketching
As the user moves their mouse over the canvas, each square the pointer
touches becomes a little darker. The squares start at a 10% gray and get
darker in even 10% increments up to black at 100%. Hovering on a square
does not cause ongoing darkening. The pointer has to leave the square
and return to it to add the next 10%. This results in a relatively
steady and controllable sketching experience.

--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,8 @@ body {
 } */
 
 .square {
-  background-color: rgb(219, 12, 12);
-  border: solid 1px white;
+  background-color: white;
+  border: solid 1px rgb(219, 12, 12);
   max-width: 500px;
   aspect-ratio: 1 / 1;
   flex: 1 1 100px;
@@ -28,6 +28,16 @@ body {
 .squareMoused {
   background-color: black;
   border: solid 1px green;
+}
+
+.gradientSquare {
+  background-color: black;
+  opacity: .1;
+  border: solid 1px rgb(219, 12, 12);
+  max-width: 500px;
+  aspect-ratio: 1 / 1;
+  flex: 1 1 100px;
+  box-sizing: border-box;
 }
 
 .row {
